Fix layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -37,14 +37,16 @@ hr {
 	margin:0;
 	padding:0;
 	text-align:center;
-	word-spacing: 70px;
+	word-spacing: 0%;
 }
 .navbar li{
 	display:inline;
+	/* modify this to change li distace */
+	padding:0px;
 }
 .navbar a{
 	display:inline-block;
-	padding:10px;
+	padding:0;
 	color: gray;
 }
 .active {
@@ -54,7 +56,7 @@ hr {
 	margin-bottom: 7%;
 }
 .nav-link {
-	line-height: 30px;
+	line-height: 60px;
 }
 .nav-link:hover {
 	background-image: url('../img/triangle.png');
@@ -119,7 +121,7 @@ hr {
 }
 .news-image {
 	box-shadow: 3px 3px 3px #aaa;
-	width:85%;
+	width:50%;
 	height:auto;
 	margin-bottom:50px;
 }
